Workaround for image layout bug in Chrome
This function is used to work around a bug in Chrome. Chrome calculates
a wrong aspect ratio under certain conditions. For details see:
https://bugs.chromium.org/p/chromium/issues/detail?id=950881

The workaround sets a CSS attribute which forces Chrome to revalidate
its internal layout.

253764

--- a/eclipse-scout-core/src/image/Image.less
+++ b/eclipse-scout-core/src/image/Image.less
@@ -19,6 +19,10 @@
     max-height: 100%;
   }
 
+  &.chrome-fix {
+    padding-bottom: 0.01px;
+  }
+
   &.empty {
     visibility: hidden;
   }
